--- a/third/css/style.css
+++ b/third/css/style.css
@@ -58,8 +58,12 @@ body {
   .main-nav__items {
     margin-top: 180px;
     text-align: center;
-    animation-duration: .01s; }
+    animation-duration: .01s; } }
+  @media (max-width: 767px) and (orientation: landscape) {
+    .main-nav__items {
+      margin-top: 80px; } }
 
+@media (max-width: 767px) {
   .main-nav__item:nth-child(1) a {
     animation-delay: 0s; }
   .main-nav__item:nth-child(2) a {
@@ -103,8 +107,11 @@ body {
       display: table;
       clear: both; }
 
+  .main-nav__items {
+    display: flex;
+    flex-direction: row-reverse; }
+
   .main-nav__item {
-    float: left;
     margin-right: 32px;
     line-height: 20px;
     vertical-align: top; }
