--- a/third/css/sass/_mixins.scss
+++ b/third/css/sass/_mixins.scss
@@ -7,10 +7,9 @@
 	}
 }
 
-@mixin container(){
+@mixin container() {
 	width: 320px;
 	margin: 0 auto;
-
 
 	@media #{$tablet} {
 		width: 640px;
@@ -19,5 +18,14 @@
 	@media #{$desktop} {
 		width: 960px;
 	}
+}
 
+@mixin container-fluid() {
+	width: auto;
+
+	@media #{$tablet} {
+		width: 84%;
+		max-width: 960px;
+		margin: 0 auto;
+	}
 }
