--- a/third/css/sass/_variables.scss
+++ b/third/css/sass/_variables.scss
@@ -3,4 +3,5 @@ $bg-lightgrey: #f8f5f2;
 $mobile: "(max-width: 767px)";
 $tablet : "(min-width: 768px)";
 $desktop : "(min-width: 1200px)";
+$retina : "(min-resolution: 144dpi), (min-resolution: 1.5dppx)";
 
