--- a/third/css/sass/blocks/_main-nav.scss
+++ b/third/css/sass/blocks/_main-nav.scss
@@ -1,6 +1,6 @@
 .main-nav {
 	z-index: 50;
-	position: fixed;
+	position: relative;
 
 }
 .main-nav__wrapper {
@@ -37,8 +37,6 @@
 	// width: 320px;
 	// min-height: 50px;
 	// margin: 0 auto;
-	
-
 	position: fixed;
 	width: 100%;
 	height: 100%;
@@ -56,7 +54,7 @@
 		text-align: center;
 		animation-duration: .01s;
 		@media (orientation:landscape) {
-			margin-top: 80px;
+			margin-top: 60px;
 		}
 	}
 
@@ -75,7 +73,6 @@
 		}
 	}
 	.main-nav__item a {
-		
 		opacity: 0;
 		position: relative;
 		outline: none;
@@ -96,20 +93,23 @@
 
 @media #{$tablet} {
 	.main-nav {
-		width: 100%;
+		width: auto;
 		// min-height: 70px;
 		margin: 0;
 		background-color: #000;
 	}
 
 	.main-nav__wrapper {
-		@include container();
-		@include clearfix();
+		// @include container();
+		@include container-fluid();
+		// @include clearfix();
 		
 	}
 	.main-nav__items {
 		display: flex;
-		flex-direction: row-reverse;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: space-around;
 	}
 	.main-nav__item {
 		// float: left;
@@ -132,9 +132,9 @@
 				content: "";
 				position: absolute;
 				right: 20px;
-				bottom: 0;
+				bottom: 10px;
 				left: 20px;
-				height: 2px;
+				height: 1px;
 				background-color: #b0b282;
 			}
 		}
