--- a/third/css/sass/blocks/_page-header.scss
+++ b/third/css/sass/blocks/_page-header.scss
@@ -1,8 +1,20 @@
 .page-header {
 	min-height: 480px;
+	// display: flex;
 	// min-height: 90vh;
-
 }
+
+.page-header__wrapper {
+	z-index: 10;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+
 
 @media #{$tablet} {
 	
