--- a/third/css/style.css
+++ b/third/css/style.css
@@ -24,9 +24,19 @@ body {
 .page-header {
   min-height: 480px; }
 
+.page-header__wrapper {
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 100%;
+  height: 100%; }
+
 .main-nav {
   z-index: 50;
-  position: fixed; }
+  position: relative; }
 
 .main-nav__wrapper {
   font-family: "Raleway", sans-serif; }
@@ -61,7 +71,7 @@ body {
     animation-duration: .01s; } }
   @media (max-width: 767px) and (orientation: landscape) {
     .main-nav__items {
-      margin-top: 80px; } }
+      margin-top: 60px; } }
 
 @media (max-width: 767px) {
   .main-nav__item:nth-child(1) a {
@@ -88,28 +98,24 @@ body {
         background-color: rgba(255, 255, 255, 0.08); } }
 @media (min-width: 768px) {
   .main-nav {
-    width: 100%;
+    width: auto;
     margin: 0;
     background-color: #000; }
 
   .main-nav__wrapper {
-    width: 320px;
-    margin: 0 auto; } }
+    width: auto; } }
   @media (min-width: 768px) and (min-width: 768px) {
     .main-nav__wrapper {
-      width: 640px; } }
-  @media (min-width: 768px) and (min-width: 1200px) {
-    .main-nav__wrapper {
-      width: 960px; } }
-@media (min-width: 768px) {
-    .main-nav__wrapper::after {
-      content: "";
-      display: table;
-      clear: both; }
+      width: 84%;
+      max-width: 960px;
+      margin: 0 auto; } }
 
+@media (min-width: 768px) {
   .main-nav__items {
     display: flex;
-    flex-direction: row-reverse; }
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around; }
 
   .main-nav__item {
     margin-right: 32px;
@@ -128,9 +134,9 @@ body {
         content: "";
         position: absolute;
         right: 20px;
-        bottom: 0;
+        bottom: 10px;
         left: 20px;
-        height: 2px;
+        height: 1px;
         background-color: #b0b282; } }
 @media (max-width: 767px) {
   .main-nav__toggle {
