--- a/forth/css/style.css
+++ b/forth/css/style.css
@@ -356,8 +356,8 @@ th {
 body {
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
-  line-height: 27px;
-  color: #f7f4f1;
+  line-height: 26px;
+  color: #ffffff;
   font-style: normal;
   background-color: #292929; }
 
@@ -390,6 +390,45 @@ body {
   font-family: "Raleway";
   font-weight: 700;
   src: url("fonts/RalewayBold/RalewayBold.woff2") format("woff2"), url(fonts/RalewayBold.woff) format("woff"); }
+
+.form {
+  display: -webkit-box;
+  display: flex;
+  flex-wrap: nowrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column; }
+
+.form-group__wrapper {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  width: 100%; }
+
+.form-group {
+  width: 100%;
+  margin-bottom: 20px; }
+
+.form-group--area {
+  -webkit-box-flex: 1;
+          flex: 1; }
+
+.form-group__field {
+  padding: 10px 10px;
+  width: 100%;
+  outline: none;
+  font-size: 18px;
+  color: #292929; }
+  .form-group__field:focus::-webkit-input-placeholder {
+    opacity: 0.5; }
+  .form-group__field:focus:-ms-input-placeholder {
+    opacity: 0.5; }
+  .form-group__field:focus::-ms-input-placeholder {
+    opacity: 0.5; }
+  .form-group__field:focus::placeholder {
+    opacity: 0.5; }
 
 .page-header {
   min-height: 480px; }
@@ -446,12 +485,40 @@ body {
   font-size: 0;
   text-decoration: none; }
 
+.button {
+  margin-left: auto;
+  display: block;
+  padding: 12px 22px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 18px;
+  color: #292929;
+  line-height: 24px;
+  font-weight: bold;
+  text-decoration: none;
+  text-transform: uppercase;
+  -webkit-hyphens: auto;
+      -ms-hyphens: auto;
+          hyphens: auto;
+  background-color: #d3d68d;
+  border: none;
+  outline: none;
+  cursor: pointer; }
+  .button:hover {
+    background-color: #b0b282; }
+  .button:active {
+    color: rgba(255, 255, 255, 0.3);
+    background-color: #d3d68d; }
+
+.line-break {
+  display: none; }
+
 .s-about {
   min-height: 200px;
   margin-bottom: 50px; }
 
 .s-about__wrapper {
-  width: auto; }
+  width: auto;
+  margin: 0 1em; }
 
 .s-about__header {
   padding: 30px 0 20px; }
@@ -460,17 +527,20 @@ body {
   text-align: center; }
 
 .s-parents__wrapper {
-  width: auto; }
+  width: auto;
+  margin: 0 1em; }
 
 .s-children__wrapper {
-  width: auto; }
+  width: auto;
+  margin: 0 1em; }
 
 .s-contacts {
   min-height: 200px;
   margin-bottom: 50px; }
 
 .s-contacts__wrapper {
-  width: auto; }
+  width: auto;
+  margin: 0 1em; }
 
 .s-contacts__header {
   padding: 30px 0 20px; }
@@ -478,23 +548,32 @@ body {
 .s-contacts__title {
   text-align: center; }
 
+.main-footer {
+  height: 500px; }
+
 .main-footer__wrapper {
-  width: auto; }
+  width: auto;
+  margin: 0 1em; }
 
 @media (min-width: 768px) {
-  .social-links {
-    display: -webkit-box;
-    display: flex; }
-  .social-links li {
-    display: -webkit-box;
-    display: flex;
-    margin: auto; }
+  .form {
+    flex-wrap: wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+            justify-content: space-between; }
+  .form-group__wrapper {
+    width: 47%; }
+  .form-group__field--area {
+    height: 100%; }
   .main-nav {
     width: auto;
     margin: 0;
-    background-color: #000; }
+    background-color: #292929; }
   .main-nav__wrapper {
     width: auto;
+    margin: 0 1em;
     display: -webkit-box;
     display: flex;
     -webkit-box-pack: justify;
@@ -531,6 +610,15 @@ body {
         background-color: #b0b282; }
   .main-nav__toggle {
     display: none; }
+    .line-break {
+      display: inline; }
+  .social-links {
+    display: -webkit-box;
+    display: flex; }
+  .social-links li {
+    display: -webkit-box;
+    display: flex;
+    margin: auto; }
     .s-about__wrapper {
       width: 84%;
       max-width: 960px;
@@ -613,8 +701,8 @@ body {
     position: fixed;
     z-index: 100;
     border: none;
-    right: 20px;
-    top: 20px;
+    right: 18px;
+    top: 18px;
     font-size: 0;
     cursor: pointer;
     background-color: #d3d68d; }
@@ -637,7 +725,7 @@ body {
     top: 0;
     width: 28px;
     height: 3px;
-    background: white;
+    background: #292929;
     border: none;
     border-radius: 4px 4px 4px 4px;
     transition: top 0.2s, -webkit-transform 0.5s;
@@ -649,7 +737,7 @@ body {
     width: 28px;
     height: 3px;
     top: 6.6px;
-    background: white;
+    background: #292929;
     border: none;
     border-radius: 4px 4px 4px 4px;
     transition: top 0.2s, -webkit-transform 0.5s;
@@ -661,7 +749,7 @@ body {
     width: 28px;
     height: 3px;
     top: 13.5px;
-    background: white;
+    background: #292929;
     border: none;
     border-radius: 4px 4px 4px 4px;
     transition: all 0.5s;
