--- a/forth/css/style.css
+++ b/forth/css/style.css
@@ -356,7 +356,7 @@ th {
 body {
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
-  line-height: 26px;
+  line-height: 24px;
   color: #ffffff;
   font-style: normal;
   background-color: #292929; }
@@ -412,6 +412,8 @@ body {
   margin-bottom: 20px; }
 
 .form-group--area {
+  display: -webkit-box;
+  display: flex;
   -webkit-box-flex: 1;
           flex: 1; }
 
@@ -419,6 +421,7 @@ body {
   padding: 10px 10px;
   width: 100%;
   outline: none;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
   color: #292929; }
   .form-group__field:focus::-webkit-input-placeholder {
@@ -457,7 +460,7 @@ body {
   list-style: none; }
 
 .main-nav__item a {
-  color: #fff;
+  color: #d3d68d;
   display: block;
   text-transform: uppercase;
   font-size: 12px;
@@ -479,6 +482,16 @@ body {
     width: 40px;
     height: 40px; }
 
+.social-links--footer {
+  display: -webkit-box;
+  display: flex; }
+
+.social-links--footer li {
+  display: -webkit-box;
+  display: flex;
+  margin: auto;
+  background-color: #292929; }
+
 .social-links__link {
   width: 40px;
   height: 40px;
@@ -492,6 +505,7 @@ body {
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
   color: #292929;
+  letter-spacing: 1.5px;
   line-height: 24px;
   font-weight: bold;
   text-decoration: none;
@@ -514,46 +528,134 @@ body {
 
 .s-about {
   min-height: 200px;
-  margin-bottom: 50px; }
+  padding-bottom: 50px;
+  background-color: #f8f5f2;
+  color: #292929; }
 
 .s-about__wrapper {
   width: auto;
   margin: 0 1em; }
 
 .s-about__header {
-  padding: 30px 0 20px; }
+  padding: 30px 0; }
 
 .s-about__title {
-  text-align: center; }
+  position: relative;
+  margin-bottom: 30px;
+  text-align: center;
+  letter-spacing: 2px; }
+  .s-about__title::after {
+    content: "";
+    margin-top: 50px;
+    right: 20vw;
+    left: 20vw;
+    height: 2px;
+    position: absolute;
+    background-color: #292929; }
+
+.s-parents {
+  min-height: 200px;
+  padding-bottom: 50px; }
 
 .s-parents__wrapper {
   width: auto;
   margin: 0 1em; }
 
+.s-parents__header {
+  padding: 30px 0; }
+
+.s-parents__title {
+  position: relative;
+  margin-bottom: 30px;
+  text-align: center;
+  color: #d3d68d;
+  letter-spacing: 2px; }
+  .s-parents__title::after {
+    content: "";
+    margin-top: 50px;
+    right: 20vw;
+    left: 20vw;
+    height: 2px;
+    position: absolute;
+    background-color: #d3d68d; }
+
+.s-children {
+  min-height: 200px;
+  padding-bottom: 50px;
+  background-color: #f8f5f2;
+  color: #292929; }
+
 .s-children__wrapper {
   width: auto;
   margin: 0 1em; }
 
+.s-children__header {
+  padding: 30px 0; }
+
+.s-children__title {
+  position: relative;
+  margin-bottom: 30px;
+  text-align: center;
+  letter-spacing: 2px; }
+  .s-children__title::after {
+    content: "";
+    margin-top: 50px;
+    right: 20vw;
+    left: 20vw;
+    height: 2px;
+    position: absolute;
+    background-color: #292929; }
+
 .s-contacts {
   min-height: 200px;
-  margin-bottom: 50px; }
+  padding-bottom: 50px;
+  color: #d3d68d; }
 
 .s-contacts__wrapper {
   width: auto;
   margin: 0 1em; }
 
 .s-contacts__header {
-  padding: 30px 0 20px; }
+  padding: 40px 0; }
 
 .s-contacts__title {
-  text-align: center; }
+  position: relative;
+  margin-bottom: 30px;
+  text-align: center;
+  letter-spacing: 2px; }
+  .s-contacts__title::after {
+    content: "";
+    margin-top: 50px;
+    right: 20vw;
+    left: 20vw;
+    height: 2px;
+    position: absolute;
+    background-color: #d3d68d; }
 
-.main-footer {
-  height: 500px; }
+.page-footer {
+  min-height: 100px;
+  background-color: #d3d68d; }
 
-.main-footer__wrapper {
+.page-footer__wrapper {
   width: auto;
-  margin: 0 1em; }
+  margin: 0 1em;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: justify;
+          justify-content: space-between; }
+
+.page-footer__logo {
+  width: 150px;
+  height: auto; }
+  .page-footer__logo img {
+    width: 100%;
+    height: auto; }
+
+.page-footer__social {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+          justify-content: center; }
 
 @media (min-width: 768px) {
   .form {
@@ -565,8 +667,6 @@ body {
             justify-content: space-between; }
   .form-group__wrapper {
     width: 47%; }
-  .form-group__field--area {
-    height: 100%; }
   .main-nav {
     width: auto;
     margin: 0;
@@ -635,10 +735,12 @@ body {
       width: 84%;
       max-width: 960px;
       margin: 0 auto; }
-    .main-footer__wrapper {
+    .page-footer__wrapper {
       width: 84%;
       max-width: 960px;
-      margin: 0 auto; } }
+      margin: 0 auto; }
+  .page-footer__logo {
+    width: 200px; } }
 
 @media (min-width: 768px) and (min-width: 768px) {
     .main-nav__wrapper {
@@ -725,7 +827,7 @@ body {
     top: 0;
     width: 28px;
     height: 3px;
-    background: #292929;
+    background: #f8f5f2;
     border: none;
     border-radius: 4px 4px 4px 4px;
     transition: top 0.2s, -webkit-transform 0.5s;
@@ -737,7 +839,7 @@ body {
     width: 28px;
     height: 3px;
     top: 6.6px;
-    background: #292929;
+    background: #f8f5f2;
     border: none;
     border-radius: 4px 4px 4px 4px;
     transition: top 0.2s, -webkit-transform 0.5s;
@@ -749,7 +851,7 @@ body {
     width: 28px;
     height: 3px;
     top: 13.5px;
-    background: #292929;
+    background: #f8f5f2;
     border: none;
     border-radius: 4px 4px 4px 4px;
     transition: all 0.5s;
