--- a/ten/sass/blocks/s-about.scss
+++ b/ten/sass/blocks/s-about.scss
@@ -4,6 +4,10 @@
 	box-sizing: border-box;
 	padding-top: 18vh;
 	padding-bottom: 22vh;
+
+	@media #{$mobile} {
+		padding: 4vmax 0 10vh;
+	}	
 }
 .s-about__wrapper {
 	box-sizing: border-box;
@@ -12,15 +16,32 @@
 	justify-content: space-between;
 	align-items: flex-start;
 
+	@media #{$mobile} {
+		flex-direction: column;
+		justify-content: center;
+		height: 100%;
+		// height: 80vh;
+	}
+
 }
 .s-about__header {
 	width: 35vw;
+
+	@media #{$mobile} {
+		width: 100%;
+		padding-bottom: 5vh;
+		text-align: center;
+	}
 }
 .s-about__title {
 	text-transform: uppercase;
 	font-size: 3.2vw;
 	line-height: 4.2vw;
 	margin-top: 0;
+
+	@media #{$mobile} {
+		font-size: 4vw;
+	}
 
 	span {
 		color: $th-color-blue;
@@ -29,6 +50,10 @@
 .s-about__description {
 	width: 44vw;
 	padding-right: 1.5vw;
+
+	@media #{$mobile} {
+		width: 100%;
+	}
 	
 	p {
 		margin: 1.18vh 0;
@@ -37,27 +62,13 @@
 		width: 30vw;
 		margin: 6vh 0;
 
+		@media #{$mobile} {
+			width: 100%;
+		}
+
 		li {
 			margin-bottom: 1.15vh;
 		}
 	}
 }
-@media #{$mobile} {
-	
-	
-}			
 
-@media #{$tablet} {
-		
-	
-}
-
-
-@media #{$desktop-small} {
-	
-}
-
-@media #{$desktop} {
-	
-
-}
