--- a/ten/sass/blocks/s-contacts.scss
+++ b/ten/sass/blocks/s-contacts.scss
@@ -8,6 +8,10 @@
 	width: fit-content;
 	position: relative;
 	top: -2.1vh;
+
+	@media #{$mobile} {	
+		top: -1vh;
+	}	
 }
 .s-contact__title {
 	text-transform: uppercase;
@@ -18,6 +22,11 @@
 	margin-top: 0;
 	font-weight: 400;
 	@include kerning(2);
+
+	@media #{$mobile} {	
+		font-size: 5vmax;
+		margin-bottom: 2vmax;
+	}	
 }
 .s-contact__decor {
 	display: flex;
@@ -33,8 +42,7 @@
 	background-color: $th-color-blue;
 }
 .s-contact__decor-svg {
-	
-	width: 1.58vw;
+	display: flex;
 	margin: 0 1.58vw;
 }
 
@@ -42,30 +50,27 @@
 	display: flex;
 	flex-wrap: nowrap;
 	justify-content: space-between;
+
+	@media #{$mobile} {	
+		flex-direction: column;
+	}	
 }
 .s-contact__list {
 	width: 23.7vw;
+
+	@media #{$mobile} {	
+		width: 100%;
+		text-align: center;
+		padding-bottom: 3vw;
+	}	
 }
 .s-contact__item {
 	padding-bottom: 5.6vh;
 	font-size: 1.9vw;
-}
-@media #{$mobile} {
-	
-	
-}			
-
-@media #{$tablet} {
-		
-	
+	@media #{$mobile} {	
+		padding-bottom: 2.6vh;
+		font-size: 3.9vw;
+		line-height: 4vw;
+	}	
 }
 
-
-@media #{$desktop-small} {
-	
-}
-
-@media #{$desktop} {
-	
-
-}
