--- a/ten/sass/blocks/s-gallery.scss
+++ b/ten/sass/blocks/s-gallery.scss
@@ -8,6 +8,10 @@
 	width: fit-content;
 	position: relative;
 	top: -2.1vh;
+
+	@media #{$mobile} {
+		top: -1vh;
+	}
 }
 .s-gallery__title {
 	text-transform: uppercase;
@@ -18,6 +22,11 @@
 	margin-top: 0;
 	font-weight: 400;
 	@include kerning(2);
+
+	@media #{$mobile} {
+		font-size: 5vmax;
+		margin-bottom: 2vmax;
+	}
 }
 .s-gallery__decor {
 	display: flex;
@@ -34,7 +43,7 @@
 }
 .s-gallery__decor-svg {
 	
-	width: 1.58vw;
+	display: flex;
 	margin: 0 1.58vw;
 }
 .s-gallery__item {
@@ -45,6 +54,11 @@
 .s-gallery__box {
 	height: 20vmax;
 	overflow: hidden;
+
+	@media #{$mobile} {
+		height: 20vw;
+	}
+
 	img {
 		width: 100%;
 	}
@@ -66,6 +80,13 @@
 	font-size: 1.26vw;
 	margin: 2.6vh 0 4.6vh;
 	font-weight: 700;
+
+	@media #{$mobile} {
+		font-size: 2.26vw;
+		margin: 1vh 0 2.6vh;
+		font-weight: 700;
+	}
+
 	span {
 		color: $th-color-blue;
 	}
@@ -75,22 +96,4 @@
 	flex-wrap: nowrap;
 	justify-content: center;
 }
-@media #{$mobile} {
-	
-	
-}			
 
-@media #{$tablet} {
-		
-	
-}
-
-
-@media #{$desktop-small} {
-	
-}
-
-@media #{$desktop} {
-	
-
-}
