--- a/ten/sass/global/forms.scss
+++ b/ten/sass/global/forms.scss
@@ -2,6 +2,10 @@
 	
 	&--consult {
 		width: 30vw;
+
+		@media #{$mobile} {
+			width: 100%;
+		}
 		
 		input {
 			background-color: $th-bg-dark;
@@ -12,6 +16,10 @@
 			margin-bottom: 1.3vh;
 			color: $th-color-dark;
 			text-transform: uppercase;
+
+			@media #{$mobile} {
+				height: 6.8vmax;
+			}
 			
 			&::placeholder {
 				color: $th-color-dark;
@@ -26,6 +34,10 @@
 
 	&--contact {
 		width: 30vw;
+
+		@media #{$mobile} {
+			width: 100%;
+		}
 		
 		input {
 			background-color: $th-bg-dark;
@@ -36,6 +48,10 @@
 			margin-bottom: 1.3vh;
 			color: $th-color-dark;
 			text-transform: uppercase;
+
+			@media #{$mobile} {
+				height: 6.8vmax;
+			}
 			
 			&::placeholder {
 				color: $th-color-dark;
@@ -52,11 +68,15 @@
 			border: none;
 			text-align: center;
 			width: 100%;
-			height: 21vh;
+			height: 10vw;
 			resize: none;
 			margin-bottom: 1.3vh;
 			color: $th-color-dark;
 			text-transform: uppercase;
+
+			@media #{$mobile} {
+				height: 10vmax;
+			}
 			
 			&::placeholder {
 				color: $th-color-dark;
@@ -80,6 +100,10 @@
 			margin-bottom: 1.3vh;
 			color: $th-color-dark;
 			text-transform: uppercase;
+
+			@media #{$mobile} {
+				height: 6.8vmax;
+			}
 			
 			&::placeholder {
 				color: $th-color-dark;
