--- a/ten/sass/global/scaffolding.scss
+++ b/ten/sass/global/scaffolding.scss
@@ -6,6 +6,11 @@ body {
 	font-size: 1.26vmax; //взяли ширину макета 1260 и размер шрифта 16, 16/1260*100, шрифт зависит от максимальной ширины экрана
 	line-height: 1.9vmax;
 	color: $th-color-dark;
+
+	@media #{$mobile} {
+		font-size: 2.26vmax;
+		line-height: 2.9vmax;
+	}
 }
 
 img {
@@ -51,7 +56,13 @@ ul, li {
 .btn {
 	border: none;
 	font-size: inherit;
-	padding: 1.58vw 4.98vw;
+	padding: 1.58vw 5.98vw;
+
+	@media #{$mobile} {
+		padding-top: 4.5vw;
+		padding-bottom: 4.5vw;
+	}
+
 	&--blue {
 		color: $th-color-light;
 		background-color: $th-color-blue;
@@ -64,12 +75,14 @@ ul, li {
 }
 
 .modal-call {
+	display: none;
 	position: fixed;
 	top: 20vh;
 	width: 50vw;
 	left: calc(50% - 25vw);
 	z-index: 51;
 }
+
 .modal-call__close {
 	width: 2vw;
 	height: 2vw;
@@ -78,15 +91,25 @@ ul, li {
 	top: -2vw;
 	right: -2vw;
 	cursor: pointer;
+
+	@media #{$mobile} {
+		width: 5vw;
+		height: 5vw;
+		top: -5vw;
+		right: -5vw;
+	}
 	
 }
+
 .modal-call__content {
 	box-sizing: border-box;
 	width: 100%;
 	padding: 10%;
 	background-color: $th-bg-light;
 }
+
 .back-fill {
+	display: none;
 	width: 100%;
 	height: 100vh;
 	position: fixed;
@@ -96,22 +119,12 @@ ul, li {
 	background-color: rgba(0, 0, 0, 0.8);
 }
 
-@media #{$mobile} {
-	
-	
-}			
+.slick-prev:before,
+.slick-next:before {
+    color: #00aaef;
 
-@media #{$tablet} {
-		
-	
+    @media #{$mobile} {
+		display: none;
+	}
 }
 
-
-@media #{$desktop-small} {
-	
-}
-
-@media #{$desktop} {
-	
-
-}
